Bug 446903 - "All borders" background forced true after duplicating dock
Summary: "All borders" background forced true after duplicating dock
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-13 00:03 UTC by Connor Troy
Modified: 2021-12-13 21:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Connor Troy 2021-12-13 00:03:41 UTC
SUMMARY
Duplicate dock "All borders" background setting is forced on and unchangeable


STEPS TO REPRODUCE
1. Duplicate Default Layout
2. Duplicate Dock on the new layout

OBSERVED RESULT
The Duplicate dock has an "All borders" background which cannot be changed

EXPECTED RESULT
The duplicate dock should be a duplicate of the original and you should be able to change its settings

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.15.7-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2

ADDITIONAL INFORMATION
This also happened to me with the original dock after switching to a different layout and back but I have not been able to reproduce.
Comment 1 Michail Vourlakos 2021-12-13 21:49:55 UTC
Git commit 87efe01a9649d64d065618abd46c2f4586520140 by Michail Vourlakos.
Committed on 13/12/2021 at 21:47.
Pushed by mvourlakos into branch 'v0.10'.

view:copy properly screen edge margin

Consider -1 as screen edge margin default value
and not zero. This way when duplicating a default
dock AllBorders are not enabled in the new dock.
FIXED-IN:0.10.5

M  +1    -1    app/layouts/storage.cpp
M  +2    -1    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/87efe01a9649d64d065618abd46c2f4586520140
Comment 2 Michail Vourlakos 2021-12-13 21:50:34 UTC
Git commit fb4cfaa3994c3c07f6c27508b21f8ee0c21e3367 by Michail Vourlakos.
Committed on 13/12/2021 at 21:50.
Pushed by mvourlakos into branch 'master'.

view:copy properly screen edge margin

Consider -1 as screen edge margin default value
and not zero. This way when duplicating a default
dock AllBorders are not enabled in the new dock.
FIXED-IN:0.10.5

M  +1    -1    app/layouts/storage.cpp
M  +2    -1    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/fb4cfaa3994c3c07f6c27508b21f8ee0c21e3367