view:copy properly screen edge margin

Consider -1 as screen edge margin default value
and not zero. This way when duplicating a default
dock AllBorders are not enabled in the new dock.

BUG:446903
FIXED-IN:0.10.5